fixed alignment

--- a/static/mycss.css
+++ b/static/mycss.css
@@ -133,7 +133,7 @@ body{
 }
 
 .background{
-  background: #F4FFF9;
+  background: #FFFFFC;
   padding-left:25px;
   padding-right: 25px;
   height:870px;
